PENV-478: add request tree and another request
